<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center_horizontal"
	android:padding="5dp">
	<TextView android:text="@string/email_address" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textSize="18dp" />
	<EditText android:id="@+id/email_address" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView android:text="@string/password"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textSize="18dp" android:layout_marginTop="5dip" />
	<EditText android:id="@+id/password" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:password="true" />
			
	<Button android:id="@+id/okbutton" android:layout_width="100dip"
		android:layout_height="wrap_content" android:text="@string/ok"
		android:layout_marginTop="5dip" />

</LinearLayout>
</ScrollView>
