<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="0dip" android:orientation="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:padding="5dip" android:orientation="horizontal"
		android:gravity="center_vertical">
		<ImageView android:id="@+id/icon" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginRight="6dip"
			android:src="@drawable/collection" />
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="right">
			<TextView android:id="@+id/title" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:gravity="center_vertical"
				android:ellipsize="marquee" android:singleLine="true"
				android:textSize="18dp"
				android:textStyle="bold" android:textColor="#FFFFFFFF" />
		</LinearLayout>
	</LinearLayout>
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:gravity="right">

			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:padding="3dip"
				android:textSize="15dp" android:text="@string/collection_rating"
				android:background="#FF525252" android:textColor="#FFBEBEBE"
				android:textStyle="bold" />
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="65dip" android:id="@+id/ratingHolder"
				android:focusable="true" android:clickable="true" android:gravity="center"
				android:background="@android:drawable/list_selector_background">
				<RatingBar android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:id="@+id/ratingBar"
					android:numStars="5" style="?android:attr/ratingBarStyleIndicator" />
			</LinearLayout>
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:padding="3dip"
				android:textSize="15dp" android:text="@string/collection_description"
				android:background="#FF525252" android:textColor="#FFBEBEBE"
				android:textStyle="bold" />
			<TextView android:id="@+id/collection_description"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:padding="6dip" android:textSize="16dp" />
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:padding="3dip"
				android:textSize="15dp" android:text="@string/card_information"
				android:background="#FF525252" android:textColor="#FFBEBEBE"
				android:textStyle="bold" />
			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:baselineAligned="true" android:paddingLeft="8dip"
				android:paddingRight="8dip" android:paddingTop="8dip"
				android:paddingBottom="5dip">
				<TextView android:text="@string/cards"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="16dp" android:maxLines="1" />
				<ImageView android:src="@drawable/dotted_line"
					android:layout_width="0dp" android:layout_weight="1"
					android:layout_height="1px" android:layout_gravity="bottom"
					android:scaleType="center" android:layout_marginRight="1dip"
					android:layout_marginLeft="1dip" android:layout_marginBottom="4dip" />
				<TextView android:id="@+id/card_count"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="16dp" android:maxLines="1" />


			</LinearLayout>





			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:baselineAligned="true" android:paddingRight="8dip"
				android:paddingLeft="8dip" android:paddingTop="0dip">
				<TextView android:text="@string/last_seen"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="16dp" android:maxLines="1" />
				<ImageView android:src="@drawable/dotted_line"
					android:layout_width="0dp" android:layout_weight="1"
					android:layout_height="1px" android:layout_gravity="bottom"
					android:scaleType="center" android:layout_marginRight="1dip"
					android:layout_marginLeft="1dip" android:layout_marginBottom="4dip" />
				<TextView android:id="@+id/last_time_seen"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="16dp" android:maxLines="1" />


			</LinearLayout>

			

			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:padding="3dip"
				android:textSize="15dp" android:text="@string/statistics"
				android:background="#FF525252" android:textColor="#FFBEBEBE"
				android:textStyle="bold" />

			<TextView android:text="@string/your_score"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="left"
				android:textSize="16dp" android:maxLines="1" />
			
			<ProgressBar android:id="@+id/score_bar"
				style="?android:attr/progressBarStyleHorizontal"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:paddingTop="5dp"
			    android:paddingBottom="15dp"
			    android:paddingLeft="5dp"
			    android:paddingRight="10dp"
			    android:max="100"
			    android:progress="50" />


			<Button android:text="@string/clear_statistics"
				android:id="@+id/clear_statistics"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:layout_marginRight="5dip" />

			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:padding="3dip"
				android:textSize="15dp" android:text="@string/privacy_and_legal_information"
				android:background="#FF525252" android:textColor="#FFBEBEBE"
				android:textStyle="bold" />

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:baselineAligned="true" android:paddingLeft="8dip"
				android:paddingRight="8dip" android:paddingTop="8dip"
				android:paddingBottom="5dip">
				<TextView android:text="@string/collection_type"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="16dp" android:maxLines="1" />
				<ImageView android:src="@drawable/dotted_line"
					android:layout_width="0dp" android:layout_weight="1"
					android:layout_height="1px" android:layout_gravity="bottom"
					android:scaleType="center" android:layout_marginRight="1dip"
					android:layout_marginLeft="1dip" android:layout_marginBottom="4dip" />
				<TextView android:id="@+id/collection_type" 
					android:text="@string/collection_private"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="16dp" android:maxLines="1" />


			</LinearLayout>
			<TextView android:id="@+id/collection_privacy_desc" 
				android:text="@string/collection_private_desc"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:paddingRight="10dip" android:paddingLeft="10dip"
				android:paddingBottom="20dip" android:textSize="14dp" />



		</LinearLayout>

	</ScrollView>
</LinearLayout>
