<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:gravity="center_horizontal"
	android:padding="5dip">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_marginBottom="10dip">
		<TextView android:text="@string/card"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="17sp" />
		<TextView android:id="@+id/card_string"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="17sp"
			android:gravity="right" />
	</LinearLayout>
	<TextView android:text="@string/message"
			android:layout_width="fill_parent" android:textSize="17sp"
			android:gravity="left"			
			android:layout_height="wrap_content" />
	<EditText android:id="@+id/message"
			android:layout_width="fill_parent" android:layout_height="100dip" />
	<Button android:id="@+id/okbutton" android:layout_width="100dip"
		android:layout_height="wrap_content" android:text="@string/report" />
</LinearLayout>
